Updated the css  stylesheet

--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,16 @@ body {
   color: white;
   text-align: center;
 }
+button {
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+  font-weight: bold;
+  width: 200px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  background-color: #343a40;
+  cursor: pointer;
+  font-family: cursive;
+}
