--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   font-family: cursive;
   border: none;
   border-radius: 10px;
-  color: white;
+  color: #feeafa;
   text-align: center;
   padding-left: 0px;
   margin-top: 40px;
